@@ -1,4 +1,4 @@
-Changes in QMPlay2 build 16.07.18:
+Changes in QMPlay2 build 16.07.20:
 	- don't fetch the stream url twice on add and play action (speed up YouTube video opening),
 	- move most settings Ui from C++ to Qt forms (thanks Zamarin Arthur for help),
 	- play the entire audio if playback has been finished (don't drop samples),
@@ -11,12 +11,14 @@ Changes in QMPlay2 build 16.07.18:
 	- fix OGG pictures for taglib 1.11 and newer,
 	- fix bug in tag editor (non-Windows OS'es),
 	- updated Russian translation (victorr2007),
-	- fix downloading cover art from Last FM,
+	- fix downloading cover art from Last.fm,
 	- move OpenGL2 shaders to resources,
 	- handle multimedia keys on Windows,
 	- properly handle chained OGG files,
 	- add sharpness shader to OpenGL2,
+	- display toolbar in compact view,
 	- move online contents to GitHub,
+	- Windows updater fixes,
 	- add contributors tab,
 	- bugfix,
 
